objects/pgadmin/pgadmin-deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          # volumeMounts:
          #   - name: pgadmin
          #     mountPath: /var/lib/pgadmin
      # volumes:
      #   - name: pgadmin
      #     persistentVolumeClaim:
      #       claimName: pgadmin-pvc
