objects/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  labels:
    app: pgadmin
spec:
  type: ClusterIP 
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
      name: http
